...
                          color = Color.White)
                    }

                // Add Friend Button
                Button(
                    onClick = { navigationActions.navigateTo(Screen.ADD_FRIEND) },
                    modifier = Modifier.padding(horizontal = 4.dp).testTag("profileAddButton"),
                    colors = ColorPalette.BUTTON_COLOR) {
                      Text(
                          text = context.getString(R.string.ProfileButtonAddFriend),
                          color = Color.White)
                    }
              }
...
              modifier = Modifier.testTag("friendStatus"))
        }

        Box(modifier = Modifier.wrapContentSize(Alignment.TopEnd)) {
          // Three-dot menu icon (Overflow menu)
          IconButton(
              modifier = Modifier.testTag("friendSettingButton"),
              onClick = { showMenu.value = true }) {
                Icon(
                    painter = painterResource(id = R.drawable.more_vertical),
                    contentDescription = "More options",
                    modifier = Modifier.size(24.dp))
              }
...
    userViewModel: UserViewModel,
    context: Context
) {
  DropdownMenu(
      expanded = showMenu.value,
      onDismissRequest = { showMenu.value = false },
      modifier = Modifier.testTag("friendMenu")) {
        val showConfirmDialog = remember { mutableStateOf(false) }
        var onConfirm = {}
        var onDismiss = {}

        CustomDialog(
            showDialog = showConfirmDialog,
...
            verbose = false,
            onSubmit = { onConfirm() },
            onDismiss = { onDismiss() },
            Content = ({ Text(context.getString(R.string.RemoveFriendContent, friend.username)) }))

        DropdownMenuItem(
            modifier = Modifier.testTag("RemoveFriendMenuItem"),
            onClick = {
              val friendUID = friend.uid
              val friendName = friend.username

              val currentUID = userViewModel.currentUser.value?.uid

...
