...

    Text(
        text = LocalContext.current.getString(R.string.ProgressionEmptyAchievements),
        fontSize = 15.sp,
        fontWeight = FontWeight.Normal,
        color = ColorPalette.SECONDARY_TEXT_COLOR,
        modifier = Modifier.padding(top = 10.dp).testTag("emptyAchievementsText"))
  } else {

    Column {
      achievements.forEach { achievementName ->
        if (achievementName.contains(ProgressionScreenSettings.ACHIEVEMEMENT_TYPE_SOCIAL)) {
          val achievementEnum = enumValueOf<SocialAchievement>(achievementName)
...
            icon = { Text(context.getString(R.string.ProgressionTrainingIconText)) },
            selected = state == DashboardStateProgression.Training,
            onClick = { uiState.value = DashboardStateProgression.Training },
            colors = ColorPalette.NAVIGATION_BAR_ITEM_COLORS)

        NavigationBarItem(
            modifier = Modifier.testTag("AchievementTab"),
            icon = { Text(context.getString(R.string.ProgressionAchievementIconText)) },
            selected = state == DashboardStateProgression.Achievement,
            onClick = { uiState.value = DashboardStateProgression.Achievement },
            colors = ColorPalette.NAVIGATION_BAR_ITEM_COLORS)
      }
}
...
