...

  // Set values for park filtering :
  val filter = FilterSettings()
  val parkFilter = ParkFilter(filter)
  val userFilterInput = FilterSettings()

  Box(modifier = Modifier.testTag("mapScreen")) {
    // Create a CameraPositionState to control the camera position
    val cameraPositionState = rememberCameraPositionState {
      position = CameraPosition.Builder().target(initialLatLng.value).zoom(12f).build()
    }

    var markerIndex = 0
...
